# leetcode

./: .gitignore  .plan  .pre-commit-config.yaml  .space.kts  README.md  dev-env-warmup.sh  main.py  pyproject.toml  requirements.txt  verify.sh
.docker/: Dockerfile
.fleet/: run.json
.github/workflows/: check.yaml  quality.yaml
.jb-gateway/: Dockerfile
.run/: all-tests.run.xml  new.run.xml
.space/: pycharm.devfile.yaml
problems/src/: shuffle_the_array.py  (+5 more)
src/: _01_matrix.py  _132_pattern.py  _3sum.py  _3sum_closest.py  _4sum.py  _4sum_ii.py  a_number_after_a_double_reversal.py  account_balance_after_rounded_purchase.py  add_binary.py  add_digits.py  add_one_row_to_tree.py  add_strings.py  add_two_numbers.py  alien_dictionary.py  alternating_digit_sum.py  arithmetic_subarrays.py  asteroid_collision.py  average_of_levels_in_binary_tree.py  backspace_string_compare.py  bag_of_tokens.py  balanced_binary_tree.py  baseball_game.py  basic_calculator.py  best_time_to_buy_and_sell_stock.py  best_time_to_buy_and_sell_stock_ii.py  best_time_to_buy_and_sell_stock_iv.py  best_time_to_buy_and_sell_stock_with_transaction_fee.py  binary_search.py  binary_tree_inorder_traversal.py  binary_tree_level_order_traversal.py  binary_tree_maximum_path_sum.py  binary_tree_postorder_traversal.py  binary_tree_preorder_traversal.py  binary_tree_pruning.py  binary_tree_right_side_view.py  binary_trees_with_factors.py  bitwise_xor_of_all_pairings.py  break_a_palindrome.py  build_an_array_with_stack_operations.py  build_array_from_permutation.py  (+517 more)
tests/: test__01_matrix.py  test__132_pattern.py  test__3sum.py  test__3sum_closest.py  test__4sum.py  test__4sum_ii.py  test_a_number_after_a_double_reversal.py  test_account_balance_after_rounded_purchase.py  test_add_binary.py  test_add_digits.py  test_add_one_row_to_tree.py  test_add_strings.py  test_add_two_integers.py  test_add_two_numbers.py  test_alien_dictionary.py  test_alternating_digit_sum.py  test_arithmetic_subarrays.py  test_asteroid_collision.py  test_average_of_levels_in_binary_tree.py  test_backspace_string_compare.py  test_bag_of_tokens.py  test_balanced_binary_tree.py  test_baseball_game.py  test_basic_calculator.py  test_best_time_to_buy_and_sell_stock.py  test_best_time_to_buy_and_sell_stock_ii.py  test_best_time_to_buy_and_sell_stock_iv.py  test_best_time_to_buy_and_sell_stock_with_transaction_fee.py  test_binary_search.py  test_binary_tree_inorder_traversal.py  test_binary_tree_level_order_traversal.py  test_binary_tree_maximum_path_sum.py  test_binary_tree_postorder_traversal.py  test_binary_tree_preorder_traversal.py  test_binary_tree_pruning.py  test_binary_tree_right_side_view.py  test_binary_trees_with_factors.py  test_bitwise_xor_of_all_pairings.py  test_break_a_palindrome.py  test_build_an_array_with_stack_operations.py  (+527 more)
(+39 files in other folders)
