[project]
name = "leetcode"
version = "0.1.0"
description = "My Leetcode exercise solutions"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click==8.2.0",
    "mypy==1.13.0",
    "pre-commit==4.0.1",
    "pur==7.3.2",
    "pytest==8.3.3",
    "ruff==0.11.10",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
exclude = [
    'tests/',
    '.venv/'
]
strict = true

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv"
]
line-length = 80
target-version = "py313"
