[project]
name = "leetcode"
version = "0.1.0"
description = "My Leetcode exercise solutions in Python"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click==8.3.1",
    "pytest==9.0.2",
    "ruff==0.14.10",
    "ty==0.0.9",
]

[tool.ruff]
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".venv"
]
line-length = 80
target-version = "py314"
